# Global config ---------------------------------------------------------------
project (cascoda-baremetal)

# Baremetal platform
add_subdirectory(cascoda-bm-core)
add_subdirectory(cascoda-bm-driver)
add_subdirectory(platform/chili)
add_subdirectory(platform/chili2)
add_subdirectory(platform/dummy-posix)


# Baremetal Applications (If a suitable platform layer was configured)
if(TARGET cascoda-bm-plat)
	add_subdirectory(sensorif)
	if(TARGET chili2)
		add_subdirectory(mikrosdk-lib/hal)
		add_subdirectory(mikrosdk-lib/drv)
		add_subdirectory(mikrosdk-click)
		add_subdirectory(app/mikrosdk-bm)
		add_subdirectory(cascoda-bm-devboard)
		add_subdirectory(app/pwm-led-dimming)
	endif()
	# Openthread platform
	add_subdirectory(cascoda-bm-thread)
	# Examples
	add_subdirectory(app/eink-bm)
	if(CASCODA_EXTERNAL_FLASHCHIP_PRESENT)
		add_subdirectory(app/external-flash-bm)
	endif()
	if(NOT (CASCODA_CA_VER EQUAL 8212))
	endif()
	add_subdirectory(app/ot-cli-actuator)
	add_subdirectory(app/ot-barebone)
	add_subdirectory(app/ot-cli-lwip)
	add_subdirectory(app/ot-cli-lwip-freertos)
	add_subdirectory(app/ot-cli-lwm2m)
	add_subdirectory(app/ot-sed-eink-freertos)
	add_subdirectory(app/ot-sed-thermometer-freertos)
	add_subdirectory(app/ot-sed-sensorif)
	add_subdirectory(app/ot-sed-thermometer)
	add_subdirectory(app/selftest-bm)
	add_subdirectory(app/sensorif-bm)
	add_subdirectory(app/mac-tempsense)
	add_subdirectory(app/mac-dongle)
	# Tests
	add_subdirectory(test)
endif()
